# src/swagger.json
@@ -1760,7 +1760,16 @@
             "schema": {
               "type": "object",
               "properties": {
-                "products": {
+                "orderStatus": {
+                  "type": "string"
+                },
+                "productsToAdd": {
+                  "type": "array",
+                  "items": {
+                    "type": "string"
+                  }
+                },
+                "productsToDelete": {
                   "type": "array",
                   "items": {
                     "type": "string"
@@ -1816,100 +1825,6 @@
           },
           "404": {
             "description": "Order not found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/orders/resolve/{id}": {
-      "patch": {
-        "tags": [
-          "Orders"
-        ],
-        "summary": "Resolve order",
-        "description": "",
-        "operationId": "resolveOrder",
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-        {
-          "name": "id",
-          "in": "path",
-          "required": true,
-          "type": "string",
-          "x-oad-type": "parameter"
-        }
-        ],
-        "x-hapi-options": {
-          "auth": {
-            "access": {
-              "scope": []
-            }
-          }
-        },
-        "x-oad-type": "operation",
-        "responses": {
-          "200": {
-            "description": "Order resolved",
-            "schema": {
-              "type": "boolean"
-            },
-            "examples": {
-              "application/json": true
-            }
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/orders/reject/{id}": {
-      "patch": {
-        "tags": [
-          "Orders"
-        ],
-        "summary": "Reject order",
-        "description": "",
-        "operationId": "rejectOrder",
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-        {
-          "name": "id",
-          "in": "path",
-          "required": true,
-          "type": "string",
-          "x-oad-type": "parameter"
-        }
-        ],
-        "x-hapi-options": {
-          "auth": {
-            "access": {
-              "scope": []
-            }
-          }
-        },
-        "x-oad-type": "operation",
-        "responses": {
-          "200": {
-            "description": "Orred rejected",
-            "schema": {
-              "type": "boolean"
-            },
-            "examples": {
-              "application/json": true
-            }
           },
           "500": {
             "description": "Internal Server Error"
